Records (java 14+)